Fix Z-Index Bug, Comment Avatar 🐞
Comment Avatar had a higher z-index than the fade background modal. So it was showing up over the faded background. Fixed.

--- a/src/public/styles/_header.scss
+++ b/src/public/styles/_header.scss
@@ -2,14 +2,14 @@
   position: absolute;
   left: 9rem;
   top: 2.9rem;
-  z-index: 6;
+  z-index: 100;
   font-size: 1.8rem;
 }
 
 .hamburgerIcon {
   margin: 0.6rem 0 0;
   cursor: pointer;
-  z-index: 4;
+  z-index: 100;
 }
 
 .hamburgerLine1,
@@ -30,7 +30,7 @@
   height: 42rem;
   color: black;
   background-color: white;
-  z-index: 3;
+  z-index: 99;
   letter-spacing: 0.02rem;
   font-weight: 400;
   font-size: 1.8rem;
@@ -44,7 +44,7 @@
   left: 0;
   bottom: 0;
   width: 100vw;
-  z-index: 2;
+  z-index: 98;
   display: none;
 }
 
